--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -19,49 +19,74 @@
   <%= render @locations %>
 </table>
 
-<div id="map"></div>
+<div id="map" class="mb-5 mt-4"></div>
 <script>
+mapboxgl.accessToken = 'pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ';
+var map;
 
-  // https://docs.mapbox.com/mapbox-gl-js/example/popup-on-hover/
-  mapboxgl.accessToken = 'pk.eyJ1IjoicGVyZXN2ZXRqa2UiLCJhIjoiY2t2OWtwbnV5MDdwMzJ4bWdyeWNsMHdkaCJ9.SrRRsNDbB_0klBwaQSSdYQ';
-const map = new mapboxgl.Map({
-  container: 'map',
-  style: 'mapbox://styles/mapbox/streets-v11',
-  center: [-77.04, 38.907],
-  zoom: 11.15
+var features = [];
+
+$.ajax({
+  dataType: "json",
+  url: '/locations',
+  async: false,
+  success: function(data) {
+    $(data).each (function() {
+      addFeature(locationDescription(this), this.lng, this.lat);
+    })
+
+    instantiateMap();
+  }
 });
- 
+
+function locationDescription(location) {
+  var description = `<strong>${location.title}</strong>`;
+  $(location.games).each (function() {
+    description += gameDescription(this);
+  });
+  return description;
+}
+
+function gameDescription(game) {
+  return `<p>${game.starting_time}</p>`;
+}
+
+// https://docs.mapbox.com/mapbox-gl-js/example/popup-on-hover/
+
+function instantiateMap() {
+    map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v11',
+    center: [37.8, 56],
+    zoom: 9
+  });
+}  
+
+function addFeature(description, lng, lat) {
+  coordinates = []
+  coordinates.push(lng)
+  coordinates.push(lat)
+  features.push({
+      'type': 'Feature',
+      'properties': {
+        'description': description
+      },
+      'geometry': {
+        'type': 'Point',
+        'coordinates': coordinates
+      }
+  })
+}
+
 map.on('load', () => {
   map.addSource('places', {
     'type': 'geojson',
     'data': {
-    'type': 'FeatureCollection',
-    'features': [
-    {
-    'type': 'Feature',
-    'properties': {
-    'description':
-    '<strong>Make it Mount Pleasant</strong><p>Make it Mount Pleasant is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>'
-    },
-    'geometry': {
-    'type': 'Point',
-    'coordinates': [-77.038659, 38.931567]
-    }
-    },
-    {
-    'type': 'Feature',
-    'properties': {
-    'description':
-    '<strong>Mad Men Season Five Finale Watch Party</strong><p>Head to Lounge 201 (201 Massachusetts Avenue NE) Sunday for a Mad Men Season Five Finale Watch Party, complete with 60s costume contest, Mad Men trivia, and retro food and drink. 8:00-11:00 p.m. $10 general admission, $20 admission and two hour open bar.</p>'
-    },
-    'geometry': {
-    'type': 'Point',
-    'coordinates': [-77.003168, 38.894651]
-    }
-    }
-    ]
+              'type': 'FeatureCollection',
+              'features': features
     }
   });
+
   // Add a layer showing the places.
   map.addLayer({
     'id': 'places',
@@ -105,6 +130,8 @@ map.on('load', () => {
     map.getCanvas().style.cursor = '';
     popup.remove();
   });
+
+
 });
 
 
